// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`given args --help should print help 1`] = `
"This is a fake template.

Options:
  --help     Show help                                                 [boolean]
  --version  Show version number                                       [boolean]
  --cwd      Path of working directory                   [string] [default: CWD]
  --foo      option foo                                                 [string]
  --bar      option bar                                      [number] [required]"
`;

exports[`when cwd is not set should write files to process.cwd 1`] = `
[
  "bar",
  "46.93",
]
`;

exports[`when cwd is set should write files to specified path 1`] = `
[
  "bar",
  "46.93",
]
`;

exports[`when required arg is not given should print error 1`] = `
"This is a fake template.

Options:
  --help     Show help                                                 [boolean]
  --version  Show version number                                       [boolean]
  --cwd      Path of working directory                   [string] [default: CWD]
  --foo      option foo                                                 [string]
  --bar      option bar                                      [number] [required]

Missing required argument: bar"
`;
